# rustmet

./: .gitignore  .mcp.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md  hermes-mcp-config.json
.github/workflows/: bench.yml  binary-release.yml  ci.yml  release.yml  validation.yml  wheels.yml
benches/: grib2_bench.rs
benchmark/: RESULTS.md  bench.rs  bench_python.py  compare.py  run_benchmark.py  validation_bench.py
crates/rustmet-core/: Cargo.toml
crates/rustmet-core/src/: composite.rs  dynamics.rs  error.rs  gridmath.rs  lib.rs  metfuncs.rs  products.rs  projection.rs  regrid.rs
crates/rustmet-core/src/download/: cache.rs  catalog.rs  client.rs  fallback.rs  idx.rs  mod.rs  sources.rs  streaming.rs
crates/rustmet-core/src/grib2/: grid.rs  mod.rs  ops.rs  parser.rs  search.rs  streaming.rs  tables.rs  tests.rs  unpack.rs  writer.rs
crates/rustmet-core/src/models/: cfs.rs  ecmwf.rs  era5.rs  gefs.rs  gfs.rs  href.rs  hrrr.rs  hrrr_ak.rs  latest.rs  mod.rs  mrms.rs  nam.rs  nbm.rs  rap.rs  rrfs.rs  rtma.rs  sref.rs  urma.rs  wpc.rs
crates/rustmet-core/src/render/: ansi.rs  colormap.rs  contour.rs  cross_section.rs  filled_contour.rs  hodograph.rs  mod.rs  overlay.rs  raster.rs  skewt.rs  station.rs
crates/rustmet-py/: Cargo.toml  README.md  pyproject.toml
crates/rustmet-py/python/rustmet/: __init__.py  rustmet_helpers.py  rustmet_xarray.py
crates/rustmet-py/src/: lib.rs
crates/rustmet-wasm/: Cargo.toml  README.md
crates/rustmet-wasm/src/: lib.rs
crates/wx-agent/: Cargo.toml
crates/wx-agent/src/: cmd_alerts.rs  cmd_conditions.rs  cmd_decode.rs  cmd_download.rs  cmd_forecast.rs  cmd_help.rs  cmd_history.rs  cmd_models.rs  cmd_point.rs  cmd_radar.rs  cmd_raob.rs  cmd_severe.rs  cmd_sounding.rs  cmd_station.rs  main.rs
crates/wx-alerts/: Cargo.toml
crates/wx-alerts/src/: alerts.rs  forecast.rs  lib.rs  reports.rs  spc.rs
crates/wx-field/: Cargo.toml
crates/wx-field/src/: error.rs  field.rs  lib.rs  meta.rs  projection.rs  radial.rs  site.rs  sounding.rs  time.rs
crates/wx-io/: Cargo.toml
crates/wx-io/src/: lib.rs
crates/wx-lite/: Cargo.toml
crates/wx-lite/src/: cache.rs  cmd_alerts.rs  cmd_brief.rs  cmd_conditions_lite.rs  cmd_forecast.rs  cmd_global.rs  cmd_hazards.rs  cmd_help.rs  cmd_history.rs  cmd_metar.rs  cmd_radar_lite.rs  cmd_severe_lite.rs  cmd_station.rs  main.rs
crates/wx-math/: Cargo.toml
crates/wx-math/src/: composite.rs  dynamics.rs  lib.rs  regrid.rs  thermo.rs
crates/wx-mcp/: Cargo.toml
crates/wx-mcp/src/: main.rs
crates/wx-obs/: Cargo.toml
crates/wx-obs/src/: fetch.rs  lib.rs  metar.rs  stations.rs  taf.rs
crates/wx-pro/: Cargo.toml
crates/wx-pro/src/: basemap.rs  cmd_alerts.rs  cmd_briefing.rs  cmd_conditions.rs  cmd_decode.rs  cmd_download.rs  cmd_evidence.rs  cmd_forecast.rs  cmd_hazards.rs  cmd_help.rs  cmd_history.rs  cmd_metar.rs  cmd_model_image.rs  cmd_models.rs  cmd_mrms.rs  cmd_point.rs  cmd_radar.rs  cmd_radar_image.rs  cmd_raob.rs  cmd_rotation.rs  cmd_scan.rs  cmd_severe.rs  cmd_sounding.rs  cmd_station.rs  cmd_storm_analysis.rs  cmd_storm_image.rs  cmd_tiles.rs  cmd_timeseries.rs  cmd_watch_box.rs  main.rs  output.rs
crates/wx-radar/: Cargo.toml
crates/wx-radar/src/: cells.rs  color_table.rs  level2.rs  lib.rs  products.rs  render.rs  sites.rs
crates/wx-render/: Cargo.toml
crates/wx-render/src/: lib.rs
crates/wx-server/: Cargo.toml
crates/wx-server/src/: cache.rs  contours.rs  lib.rs  main.rs  radar_tiles.rs  sounding.rs  sse.rs  surface_obs.rs  tiles.rs  wind_barbs.rs
crates/wx-sounding/: Cargo.toml
crates/wx-sounding/src/: derived.rs  lib.rs  raob_stations.rs  types.rs  wyoming.rs
crates/wx-ui/: Cargo.toml
crates/wx-ui/src/: app.rs  main.rs  state.rs  theme.rs
crates/wx-ui/src/panels/: download.rs  hodograph.rs  info_panel.rs  map_view.rs  message_list.rs  mod.rs  radar.rs  sidebar.rs  sounding.rs
crates/wx-ui/src/widgets/: colorbar.rs  mod.rs  status_bar.rs
deploy/: Dockerfile  README.md  docker-compose.yml
deploy/systemd/: wx-server.service
docs/: migration_from_cfgrib.md  migration_from_metpy.md  ml-meso-training-data.md
examples/: batch_processing.py  cross_section.py  dynamics_demo.rs  metcalc.rs  operational_hrrr.py  render_demo.rs  search_demo.rs  write_grib2.rs
examples/hermes-agent/: README.md
examples/hermes-agent/config/: SOUL.md  USER.md  dot-env.example  hermes_config.yaml
examples/hermes-agent/skills/: fire_weather.md  morning_briefing.md  severe_weather_alert.md
examples/hermes-agent/skills/weather/activity-check/: SKILL.md
examples/hermes-agent/skills/weather/fire-weather/: SKILL.md
examples/hermes-agent/skills/weather/morning-briefing/: SKILL.md
examples/hermes-agent/skills/weather/severe-weather-alert/: SKILL.md
examples/web-dashboard/: README.md  index.html
hackathon/: README.md  demo_script.md
hackathon/config/: SOUL.md  USER.md  hermes_config.yaml
hackathon/skills/: activity_check.md
sdk/js/: README.md  package.json
sdk/js/examples/: basic-api.html  leaflet-tiles.html
sdk/js/src/: index.ts
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: quickstart.py
sdk/python/wx_tools/: __init__.py  client.py
src/: colormaps.rs  main.rs  metfuncs.rs  products.rs  render.rs
src/download/: client.rs
src/grib2/: mod.rs  parser.rs  tables.rs  unpack.rs
src/models/: gfs.rs  mod.rs  nam.rs
