[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rustmet"
version = "0.1.0"
description = "Fast GRIB2 processor for weather models — pure Rust, 5x faster than cfgrib"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["grib2", "weather", "meteorology", "hrrr", "gfs", "nam", "rap", "nwp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
xarray = ["xarray>=2022.1"]

[tool.maturin]
python-source = "python"
module-name = "rustmet._rustmet"
features = ["pyo3/extension-module"]
