[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rustmet"
version = "0.1.0"
description = "Fast GRIB2 processor for weather models with pure Rust bindings"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Drew", email = "drew@fahrenheitresearch.com" },
]
keywords = ["grib2", "weather", "meteorology", "hrrr", "gfs", "nam", "rap", "nwp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]

dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
xarray = ["xarray>=2022.1"]

[project.urls]
Homepage = "https://github.com/FahrenheitResearch/rustmet"
Repository = "https://github.com/FahrenheitResearch/rustmet"
Issues = "https://github.com/FahrenheitResearch/rustmet/issues"

[tool.maturin]
python-source = "python"
module-name = "rustmet._rustmet"
features = ["pyo3/extension-module"]
