[package]
name = "rustmet-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for rustmet GRIB2 parser"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
rustmet-core = { path = "../rustmet-core", default-features = false }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O2"]
