[package]
name = "wx-agent"
version = "0.1.0"
edition = "2021"
description = "Agentic weather platform CLI — JSON API for AI agents"
license = "MIT"
authors = ["Fahrenheit Research"]

[[bin]]
name = "wx"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rustmet-core = { path = "../rustmet-core" }
wx-math = { path = "../wx-math" }
wx-field = { path = "../wx-field" }
wx-obs = { path = "../wx-obs" }
wx-alerts = { path = "../wx-alerts" }
wx-sounding = { path = "../wx-sounding" }
ureq = { version = "3", features = ["rustls"] }
wx-radar = { path = "../wx-radar" }
flate2 = "1"
