[package]
name = "wx-lite"
version = "0.1.0"
edition = "2021"
description = "Bandwidth-optimized weather CLI — minimum bytes, maximum coverage"
license = "MIT"
authors = ["Fahrenheit Research"]

[[bin]]
name = "wx-lite"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rustmet-core = { path = "../rustmet-core" }
wx-obs = { path = "../wx-obs" }
wx-alerts = { path = "../wx-alerts" }
ureq = { version = "3", features = ["rustls"] }
flate2 = "1"
