[package]
name = "wx-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server exposing wx weather tools to AI agents"
license = "MIT"
authors = ["Fahrenheit Research"]

[[bin]]
name = "wx-mcp"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
