[package]
name = "wx-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wx-server"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-stream = "0.3"
futures = "0.3"
chrono = "0.4"

# In-process GRIB2 download + tile rendering
rustmet-core = { path = "../rustmet-core" }
wx-field = { path = "../wx-field" }
wx-radar = { path = "../wx-radar" }
wx-sounding = { path = "../wx-sounding" }
wx-obs = { path = "../wx-obs" }
ureq = { version = "3", features = ["rustls"] }
