[package]
name = "wx-ui"
version = "0.1.0"
edition = "2021"
description = "WxView — Professional atmospheric analysis GUI"

[[bin]]
name = "wxview"
path = "src/main.rs"

[dependencies]
# GUI framework
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["syntect"] }

# Native file dialogs
rfd = "0.15"

# Core weather processing
rustmet-core = { path = "../rustmet-core" }
wx-field = { path = "../wx-field" }
wx-math = { path = "../wx-math" }
wx-radar = { path = "../wx-radar" }

# HTTP for radar downloads
ureq = { version = "3", features = ["rustls"] }
flate2 = "1"

# Geographic data (basemaps)
rustmaps = { git = "https://github.com/FahrenheitResearch/rustmaps.git" }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
