[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "wx-tools"
version = "0.1.0"
description = "Weather data SDK — HRRR/GFS/RAP/NAM tiles, radar, METAR, alerts, forecasts"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["weather", "meteorology", "hrrr", "gfs", "radar", "metar", "nws"]
dependencies = ["requests>=2.20"]

[project.optional-dependencies]
async = ["httpx>=0.24"]
